--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
 		body {
 			font-family: helvetica neue, arial, helvetica, sans-serif;
 			font-size: 11pt;
+			line-height: 1.4em;
 		}
 
 		h1 {
@@ -32,11 +33,16 @@
 		}
 
 		h5 {
-			margin: 0;
+			margin: 0.5em 0 0 0;
 			padding: 0;
 			color: gray;
 			font-size: 10pt;
 			font-weight: normal;
+		}
+
+		li p {
+			margin-top: 0.5em;
+			margin-bottom: 0;
 		}
 
 		#wrapper {
